css/site.css
/* ... */
.home-about-banner {
  height: 400px;
  background-color: #017fdd;
  color: white;
}

@media (max-width: 479px) {
  .home-about-banner {
    padding-top: 50px;
    padding-bottom: 50px;
  }
}

.home-about-banner h1, .home-about-banner h3, .home-about-banner h4 {
  margin-bottom: 10px;
  margin-top: 0px;
}

.home-about-banner h2 {
  margin-bottom: 20px;
  margin-top: 0px;
}

.home-about-banner a {
  color: white;
}

@media (max-width: 479px) {
  .home-about-banner h4 {
    font-size: 20px;
  }
}

.hardware-banner {
  background-image: url('/images/pages/laptop.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  z-index: 5;
  padding-top: 40px;
  padding-bottom: 60px;
  background-color: #017fdd;
  color: white;
  height: 400px;
}

.discover-banner {
  background-image: url('/images/pages/access-point-arrow.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  z-index: 5;
  padding-top: 40px;
  padding-bottom: 60px;
  background-color: #017fdd;
  color: white;
  height: 400px;
}

.card-icons {
  color: rgba(0,0,0, 0.54);
}

.header-card {
  position: relative;
  z-index: 6;
  margin-top: -120px;
  max-height: 350px;
}

.header-card a:hover {
  color: #607D8B;
}

.header-card img {
  max-width: 120px;
  max-height: 120px;
}

.header-card a {
  text-decoration: none;
}

.supported-hardware {
  position: relative;
  z-index: 3;
  /*background-color: #F5F5F5;*/
  padding-top: 20px;
  padding-bottom: 20px;
  border-bottom: 1px solid rgb(224, 224, 224);
}

.supported-hardware img {
  max-height: 50px;
  max-width: 150px;
  height: auto;
  width: 100%;
}


@media (max-width: 839px) {
  .supported-hardware img {
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

.community-post {
  padding-left: 20px;
  padding-right: 20px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.community {
  background: #FAFAFA;
}

/*material icons*/
.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }
.material-icons.md-64 { font-size: 64px; }

.features-table {
  margin-top: 40px;
  margin-bottom: 40px;
}

@media (max-width: 749px) {
  .mdl-data-table {
    white-space: normal;
  }
}

.features-table-heading {
  background: #E0E0E0;
}

@media (max-width: 520px) {
  .features-table td {
    padding: 12px 0 0 0;
    font-size: 11px;
  }
  .features-table th {
    padding: 0px;
  }
}

.features-table td {
  text-align: center;
}

.features-table i {
  color: rgba(0,0,0, 0.54);
}

.terms-page {
  background: #FAFAFA;
}

.terms-card {
  padding: 50px;
  margin-top: 50px;
  margin-bottom: 50px;
}

.meraki-banner {
  background-image: url('/images/pages/meraki-box.png');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  z-index: 5;
  padding-top: 40px;
  padding-bottom: 60px;
  background-color: #017fdd;
  color: white;
  height: 400px;
}

.openwrt-banner {
  background-image: url('/images/pages/rasp-pi-box.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  z-index: 5;
  padding-top: 40px;
  padding-bottom: 60px;
  background-color: #017fdd;
  color: white;
  height: 400px;
}

.powercloud-banner {
  background-image: url('/images/pages/powercloud-box.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  z-index: 5;
  padding-top: 40px;
  padding-bottom: 60px;
  background-color: #017fdd;
  color: white;
  height: 400px;
}

.ruckus-banner {
  background-image: url('/images/pages/orange-bg.png');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  z-index: 5;
  padding-top: 40px;
  padding-bottom: 60px;
  background-color: #017fdd;
  color: white;
  height: 400px;
}

.features-banner {
  background-color: #017fdd;
  height: 400px;
  color: white;
  line-height: 30px;
  padding-top: 40px;
  padding-bottom: 60px;
}

@media (max-width: 479px) {
  .features-banner h1 {
    font-size: 36px;
  }

  .features-banner h2 {
    font-size: 20px;
    line-height: 30px;
  }
}

.features-page {
  background-color: #FAFAFA;
  padding-top: 20px;
  padding-bottom: 20px;
}

.features-card {
  margin-top: -100px;
  margin-bottom: 100px;
}

.mdl-menu a {
  text-decoration: none;
}

.community-post p {
  color: rgba(0,0,0, 0.54);
}

.case-study-post p {
  color: rgba(0,0,0, 0.54);
}

.sidebar-logo img {
  max-width: 200px;
  padding: 16px;
}

.mdl-navigation hr {
  margin-top: 5px;
  margin-bottom: 5px;
}

.mdl-layout__drawer .mdl-navigation .navigation-subheader-list .mdl-navigation__link {
  color: #757575;
  padding-left: 30px;
}

